openshift/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: figlet-caddy
  labels:
    app: figlet-caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: figlet-caddy
  template:
    metadata:
      labels:
        app: figlet-caddy
    spec:
      containers:
      - name: faas
        image: ghcr.io/fnndsc/figlet-faas@sha256:c45c5862e5f5c6afb973df2dbb61114e20af65c251efbc07b560c5b1c3ee584d
        ports:
        - containerPort: 5000
      - name: caddy
        image: ghcr.io/jennydaman/caddy@sha256:7da0f90273e1961d9c38d26809f84d4ef3cdc9b4fc330a9cab22015d7c9e8228
        ports:
        - containerPort: 8000
        - containerPort: 8443
        volumeMounts:
        - name: caddy-data
          mountPath: /data
        - name: caddy-config
          mountPath: /config
        - name: caddy-caddyfile
          mountPath: /etc/caddy
      volumes:
        - name: caddy-data
          persistentVolumeClaim:
            claimName: caddy-data
        - name: caddy-config
          persistentVolumeClaim:
            claimName: caddy-config
        - name: caddy-caddyfile
          readOnly: true
          configMap:
            name: caddyfile-for-figlet
            items:
            - key: Caddyfile
              path: Caddyfile
